--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "embla-carousel-react": "^8.6.0",
     "hono": "^4.8.2",
     "lucide-react": "^0.522.0",
+    "mime": "^4.0.7",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
-    "mime": "^4.0.7",
     "next-themes": "^0.4.6",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
@@ -54,6 +54,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
