--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-table": "^8.21.3",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
@@ -40,6 +41,7 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "nprogress": "^0.2.0",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
@@ -55,6 +57,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/nprogress": "^0.2.3",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
